-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0 Beta
-
None
-
win10 x64
-
3242a3be7c7cc84e6fcda3e90a7713d9fda16915
ComboBox ‘s data model don't support object array
such as [
,
{display:"b",value:1}]
because Combobox.qml source code delegate is
delegate: ItemDelegate
{ width: control.width text: control.textRole ? model[control.textRole] : modelData checkable: true autoExclusive: true checked: control.currentIndex === index highlighted: control.highlightedIndex === index pressed: highlighted && control.pressed }I suggest that
change text for example: Array.isArray(model) ? modelData[textRole] : model[textRole]
textRole is empty text is modelData.
For Gerrit Dashboard: QTBUG-50141 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
147238,2 | ComboBox: add support for object array | 5.6 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |