src/imports/controls/ComboBox.qml
@@ -55,7 +55,7 @@ T.ComboBox {
     //! [delegate]
     delegate: ItemDelegate {
         width: control.width
-        text: control.textRole ? model[control.textRole] : modelData
+        text: control.textRole ? (Array.isArray(control.model) ? modelData[control.textRole] : model[control.textRole]) : modelData
         checkable: true
         autoExclusive: true
         checked: control.currentIndex === index
